# FastInverseSquareRoot

./: .gitignore  CMakeLists.txt
inverse_root_benchmark/: CMakeLists.txt  inverse_root.h  inverse_root_benchmark.cpp
